--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -10,5 +10,5 @@ jobs:
         with:
           find: "--VERSION--"
           replace: "{{ github.event.release.tag_name }}"
-          include: "**" # 
+          include: "*"
 
