--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -9,6 +9,6 @@ jobs:
         uses: jacobtomlinson/gha-find-replace@v2
         with:
           find: "--VERSION--"
-          replace: "{{ github.event.release.tag_name }}"
+          replace: "${{ github.event.release.tag_name }}"
           include: "*"
 
