--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -4,11 +4,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Version Is
+      - run: echo running on branch ${GITHUB_REF##*/}
       - uses: actions/checkout@v2
       - name: Find and Replace
         uses: jacobtomlinson/gha-find-replace@v2
         with:
           find: "--VERSION--"
-          replace: "${{ github.event.release.tag_name }}"
+          replace: ${GITHUB_SHA}
           include: "*"
 
